--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -46,6 +46,11 @@
             "left": "$$",
             "right": "$$",
             "display": true
+          },
+          {
+            left: "<d-math block>", 
+            right: "</d-math>", 
+            display: true
           }
         ]
       }
