--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -48,9 +48,9 @@
             "display": true
           },
           {
-            left: "<d-math block>", 
-            right: "</d-math>", 
-            display: true
+            "left": "<d-math block>", 
+            "right": "</d-math>", 
+            "display": true
           }
         ]
       }
