--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -48,11 +48,27 @@
             "display": false
           },
           {
+            "left": "\\[",
+            "right": "\\]",
+            "display": true
+          },
+          {
             "left": "<d-math block>", 
             "right": "</d-math>", 
             "display": true
           }
-        ]
+        ],
+        "macros":{
+      		"\\abs":"\\left\\lvert #1 \\right\\rvert",
+      		"\\norm":"\\left\\lVert #1 \\right\\rVert",
+      		"\\parens":"\\left( #1 \\right)",
+      		"\\squareb":"\\left[ #1 \\]",
+      		"\\curlyb":"\\left\\{ #1 \\right\\}",
+      		"\\cross":"\\left\\langle #1 \\right\\rangle",
+      		"\\Eb":"\\mathbb{E}",
+      		"\\Pb":"\\mathbb{P}",
+      		"\\Rb":"\\mathbb{R}"
+      	}
       }
     }</script>
   </d-front-matter>
