--- a/_includes/hemline.html
+++ b/_includes/hemline.html
@@ -5,7 +5,7 @@
 <script src="{{ '/assets/js/common.js' | relative_url }}"></script>
 
 <!-- Load Mathjax for Kramdown -->
-<script>
+<!-- <script>
 MathJax = {
   tex: {
     inlineMath: [['\\[', '\\]']]
@@ -18,7 +18,7 @@ MathJax = {
 <script type="text/javascript" id="MathJax-script" async
   src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
 </script>
-
+ -->
 {% if site.enable_katex %}
 <!-- Load KaTeX -->
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/KaTeX/{{ site.katex_version }}/katex.min.css">
