--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -53,6 +53,11 @@
             "display": true
           },
           {
+            "left": "\\(",
+            "right": "\\)",
+            "display": true
+          },
+          {
             "left": "<d-math block>", 
             "right": "</d-math>", 
             "display": true
