--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -55,7 +55,7 @@
           {
             "left": "\\(",
             "right": "\\)",
-            "display": true
+            "display": false
           },
           {
             "left": "<d-math block>", 
